<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".SignsActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/author"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            style="@style/LogoStyle"
            android:layout_margin="16dp"
            android:contentDescription="@string/logo_museum"
            android:src="@drawable/museum" />

        <ImageView
            style="@style/LogoStyle"
            android:layout_margin="16dp"
            android:contentDescription="@string/city_logo"
            android:src="@drawable/city" />

        <ImageView
            style="@style/LogoStyle"
            android:layout_margin="16dp"
            android:contentDescription="@string/university_logo"
            android:src="@drawable/university" />

        <ImageView
            style="@style/LogoStyle"
            android:layout_width="78dp"
            android:layout_margin="16dp"
            android:contentDescription="@string/logo_l3i"
            android:src="@drawable/l3i" />

    </LinearLayout>

</LinearLayout>