<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:padding="@dimen/padding_horizontal"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/padding_horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/help_first_part"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_size" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/padding_vertical"
            android:paddingTop="@dimen/padding_vertical">

            <ImageView
                android:layout_width="@dimen/image_main"
                android:layout_height="@dimen/image_main"
                android:contentDescription="@string/menu"
                android:scaleType="centerCrop"
                android:src="@drawable/help_menu" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="@dimen/padding_main"
                android:paddingRight="@dimen/padding_main">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/help_language"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/text_size" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/padding_vertical"
                    android:text="@string/help_signNumber"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/text_size" />

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/padding_vertical"
            android:layout_weight="1"
            android:text="@string/help_second_part"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_size" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/padding_vertical"
            android:paddingTop="@dimen/padding_vertical">

            <ImageView
                android:layout_width="@dimen/image_main"
                android:layout_height="@dimen/image_main"
                android:contentDescription="@string/sign"
                android:scaleType="centerCrop"
                android:src="@drawable/help_signs" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="@dimen/padding_main"
                android:paddingRight="@dimen/padding_main">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/help_arrows"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/text_size" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/padding_vertical"
                    android:text="@string/help_menu"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/text_size" />

            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingTop="@dimen/padding_vertical"
            android:text="@string/help_label"
            android:textSize="@dimen/text_size" />

    </LinearLayout>

</ScrollView>