<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    android:padding="@dimen/padding_horizontal"
    tools:context=".SignsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/logo_sign_height">

            <LinearLayout
                android:layout_width="@dimen/logo_sign_width"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/sign_logo"
                    android:layout_width="@dimen/logo_sign_width"
                    android:layout_height="@dimen/logo_sign_height"
                    android:contentDescription="@string/logo_sign" />

                <ImageView
                    android:id="@+id/second_logo"
                    android:layout_width="@dimen/logo_sign_width"
                    android:layout_height="@dimen/logo_sign_height"
                    android:contentDescription="@string/logo_sign" />

                <ImageView
                    android:id="@+id/audio_button"
                    style="@style/Clickable"
                    android:layout_width="@dimen/logo_width"
                    android:layout_height="@dimen/logo_height"
                    android:layout_marginLeft="@dimen/padding_audio"
                    android:layout_marginRight="@dimen/padding_audio"
                    android:layout_marginTop="@dimen/padding_audio"
                    android:contentDescription="@string/audio" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/padding_sign_text"
                android:layout_marginLeft="@dimen/padding_horizontal"
                android:layout_marginRight="@dimen/padding_sign_text"
                android:layout_marginStart="@dimen/padding_horizontal"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/sign_title"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/logo_sign_height"
                    android:layout_marginBottom="@dimen/padding_vertical"
                    android:gravity="bottom"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/text_size" />

                <TextView
                    android:id="@+id/sign_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/text_size" />

            </LinearLayout>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/sign_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/padding_vertical"
                android:layout_marginLeft="@dimen/padding_horizontal"
                android:layout_marginStart="@dimen/padding_horizontal"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_size" />

            <ImageView
                android:id="@+id/previousSign"
                style="@style/LogoStyle"
                android:layout_alignParentBottom="true"
                android:layout_below="@+id/sign_number"
                android:contentDescription="@string/left_arrow"
                android:src="@drawable/left_arrow" />

            <ImageView
                android:id="@+id/nextSign"
                style="@style/LogoStyle"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:contentDescription="@string/right_arrow"
                android:src="@drawable/right_arrow" />

        </RelativeLayout>

    </LinearLayout>

</ScrollView>